# QmlDraw

src/: CMakeLists.txt  ColorPicker.qml  Main.qml  PropertyShapePanel.qml  main.cpp
src/lib/: CMakeLists.txt
src/lib/painter/: CMakeLists.txt  canvasitem.cpp  canvasitem.h  circle.h  linenode.cpp  linenode.h  lineshape.cpp  lineshape.h  mypainter.cpp  mypainter.h  rectanglenode.cpp  rectanglenode.h  rectanglepainter.cpp  rectanglepainter.h  rectangleshape.cpp  rectangleshape.h  shape.cpp  shape.h  shapenode.cpp  shapenode.h  shapesmodel.cpp  shapesmodel.h
